# hex-record-inspector

./: AGENTS.md  README.md  pyproject.toml
examples/: pic32-music-box.hex
src/hexinspector/: __init__.py  cli.py  parser.py  visualizer.py
tests/: test_parser.py  test_visualizer.py
